
export default interface FsecRoleModel {
    id: number,
    label: string,
}